syntax = "proto3";
package pb;
import "passenger.proto";
import "driver.proto";

service TripService {
  rpc GenTrip(TripReq) returns (TripResp);
}

message TripReq {
  PassengerReq passenger_req = 1;
  DriverReq driver_req = 2;
}

message Trip {
  int64 trip_num = 1;
  int64 passenger_id = 2;
  int64 driver_id = 3;
  string passenger_name = 4;
  string driver_name = 5;
  int64 start_time = 6;
  int64 end_time = 7;
  string origin = 8;
  string destination = 9;
  string car = 10;
  string path = 11;
}

message TripResp {
  bool status = 1;
  Trip trip = 2;
}