syntax = "proto3";
//option go_package = ".;import";
package pb;

//The Passenger service definition.
service Passenger {
 rpc GetPassengerInfo (GetPassengerInfoRequest) returns (GetPassengerInfoReply);
 rpc PublishOrder     (PublishOrderRequest    ) returns (PublishOrderReply    );
}

message GetPassengerInfoRequest {
 string username = 1;
 string password = 2;
}

message GetPassengerInfoReply {
 int64  user_id     = 1;
 string name        = 2;
 int32  age         = 3;
 int64  account_num = 4;
 float  asset       = 5;
}

message PublishOrderRequest {
 int64  passenger_id   = 1;
 int64  start_time     = 2;
 string origin         = 3;
 string destination    = 4;
 string passenger_name = 5;
}

message PublishOrderReply {
 bool   status      = 1;
 string driver_name = 2;
 string location    = 3;
 string car         = 4;
 string path        = 5;
}

